rusty-cdk/tests/snapshots/snapshots__lambda_with_websocket_api_gateway.snap
---
source: rusty-cdk/tests/snapshots.rs
expression: synthesized
---
{
  "Metadata": {
    "WebSocketGW": "[HttpApiGateway]",
    "WebSocketGWIntegration": "[HttpApiIntegration]",
    "WebSocketGWPermission": "[LambdaPermission]",
    "WebSocketGWStage": "[HttpApiStage]",
    "WebSocketGWmyFun": "[HttpApiRoute]",
    "myFun": "[LambdaFunction]",
    "myFunLogGroup": "[LogGroup]",
    "myFunRole": "[LambdaFunctionRole]"
  },
  "Resources": {
    "[HttpApiGateway]": {
      "Properties": {
        "Name": "my-websocket-api",
        "ProtocolType": "WEBSOCKET",
        "RouteSelectionExpression": "$request.body.action"
      },
      "Type": "AWS::ApiGatewayV2::Api"
    },
    "[HttpApiIntegration]": {
      "Properties": {
        "ApiId": {
          "Ref": "[HttpApiGateway]"
        },
        "IntegrationType": "AWS_PROXY",
        "IntegrationUri": {
          "Fn::GetAtt": [
            "[LambdaFunction]",
            "Arn"
          ]
        },
        "PayloadFormatVersion": "1.0"
      },
      "Type": "AWS::ApiGatewayV2::Integration"
    },
    "[HttpApiRoute]": {
      "Properties": {
        "ApiId": {
          "Ref": "[HttpApiGateway]"
        },
        "RouteKey": "handle",
        "Target": {
          "Fn::Join": [
            "",
            [
              "integrations/",
              {
                "Ref": "[HttpApiIntegration]"
              }
            ]
          ]
        }
      },
      "Type": "AWS::ApiGatewayV2::Route"
    },
    "[HttpApiStage]": {
      "Properties": {
        "ApiId": {
          "Ref": "[HttpApiGateway]"
        },
        "AutoDeploy": true,
        "StageName": "prod"
      },
      "Type": "AWS::ApiGatewayV2::Stage"
    },
    "[LambdaFunction]": {
      "Properties": {
        "Architectures": [
          "arm64"
        ],
        "Code": {
          "S3Bucket": "some-bucket",
          "S3Key": "[Asset]"
        },
        "Handler": "bootstrap",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "[LogGroup]"
          }
        },
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "[LambdaFunctionRole]",
            "Arn"
          ]
        },
        "Runtime": "provided.al2023",
        "Timeout": 30
      },
      "Type": "AWS::Lambda::Function"
    },
    "[LambdaFunctionRole]": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sts:AssumeRole"
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ],
        "Policies": []
      },
      "Type": "AWS::IAM::Role"
    },
    "[LambdaPermission]": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "[LambdaFunction]",
            "Arn"
          ]
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region"
              },
              ":",
              {
                "Ref": "AWS::AccountId"
              },
              ":",
              {
                "Ref": "[HttpApiGateway]"
              },
              "*/*handle"
            ]
          ]
        }
      },
      "Type": "AWS::Lambda::Permission"
    },
    "[LogGroup]": {
      "Properties": {
        "RetentionInDays": 731
      },
      "Type": "AWS::Logs::LogGroup"
    }
  }
}
