rusty-cdk/tests/snapshots/snapshots__scanning_config.snap
---
source: rusty-cdk/tests/snapshots.rs
expression: synthesized
---
{
  "Metadata": {
    "basic": "[RegistryScanningConfiguration]"
  },
  "Resources": {
    "[RegistryScanningConfiguration]": {
      "Properties": {
        "Rules": [
          {
            "RepositoryFilters": [
              {
                "Filter": "prefix*",
                "FilterType": "WILDCARD"
              }
            ],
            "ScanFrequency": "SCAN_ON_PUSH"
          }
        ],
        "ScanType": "BASIC"
      },
      "Type": "AWS::ECR::RegistryScanningConfiguration"
    }
  }
}
